# tflite-esp-rock-paper-scissors

./: .gitignore  .gitmodules  ARCHITECTURE.md  CONTRIBUTING.md  LOAD_COLAB.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: cmake.yml
src/: model_pipeline.sh  pipeline.sh
src/data_collection/: README.md  collect_from_esp.py  video_to_img.sh
src/data_collection/esp_eye_cam/: CameraWebServer.ino  credentials.template
src/data_preprocessing/: README.md  augment.py  augmentation_layers.py  balance_classes.py  const.py  preprocess.py  preprocessing_pipeline.py  split_data.py
src/data_preprocessing/imagemorph/: README.md  imagemorph.c  imagemorph.py  setup.py
src/keras_model/: README.md  dataset.py  hyper_param_analysis.ipynb  hyper_param_search.py  main.py  model_custom.py  model_mobile.py  model_resnet50.py  model_search.py  predict.py
src/tf_lite_model/: README.md  convert_to_tflite.py  img_to_array.py  model_to_mcu.py  tflite_to_c_array.sh
src/tinyml_deployment/: CMakeLists.txt  README.md  clean_compile_commands.sh  sdkconfig.defaults  update_components.sh
src/tinyml_deployment/main/: CMakeLists.txt
src/tinyml_deployment/main/inc/: DataProvider.h  FeatureProvider.h  PredictionHandler.h  PredictionInterpreter.h  app_camera_esp.h  ascii_art.h  im_grayscale.h  main_functions.h  micro_model.h  model_weights.h
src/tinyml_deployment/main/src/: DataProvider.cpp  FeatureProvider.cpp  PredictionHandler.cpp  PredictionInterpreter.cpp  app_camera_esp.cpp  data_provider.cpp  feature_provider.cpp  im_grayscale.cpp  main.cpp  main_functions.cpp  micro_model.cpp  model_weights.cpp
